[package]
name = "pwr-rs"
version = "0.2.9"
edition = "2021"
authors = ["Hamid R. K. Pishghadam <kaveh@riseup.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwrlabs/pwrrs"
homepage = "https://pwrlabs.io/"
description = """
PWR Chain Rust Tool
"""
keywords = ["pwr", "sdk", "tool", "async"]
rust-version = "1.63.0"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }
hex = "0.4.3"
sha3 = "0.10.8"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.12.5", features = ["json"], optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }
borsh = { version = "1.5", features = ["derive"], optional = true }
url = { version = "2.5.0", optional = true }

[features]
default = ["rpc", "rand"]
rand = ["dep:rand"]
borsh = ["dep:borsh"]
rpc = ["dep:serde_json", "dep:url", "dep:reqwest"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
